[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/Dungeon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/MenuMusic.tscn" type="PackedScene" id=5]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Logo" type="Label" parent="."]
margin_left = 10.0
margin_top = 14.0
margin_right = 80.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 12 )
text = "DARK SEWERS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -17.0
margin_top = 62.0
margin_right = 15.0
margin_bottom = -51.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b_play" parent="MenuButtons" instance=ExtResource( 3 )]
text = "Play"
scene_to_load = "res://Scenes/Battle.tscn"

[node name="b_credits" parent="MenuButtons" instance=ExtResource( 3 )]
margin_top = 17.0
margin_bottom = 30.0
text = "Credits"
scene_to_load = "res://Scenes/Credits.tscn"

[node name="b_quit" parent="MenuButtons" instance=ExtResource( 3 )]
margin_top = 34.0
margin_bottom = 47.0
text = "Quit"

[node name="Version" type="Label" parent="."]
margin_left = 5.17654
margin_top = 135.237
margin_right = 54.1765
margin_bottom = 147.237
text = "version 0.5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevelopedBy" type="Label" parent="."]
margin_left = 4.77495
margin_top = 145.307
margin_right = 85.7749
margin_bottom = 157.307
rect_min_size = Vector2( 70, 12 )
text = "Developed by: ErnnV"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 4 )]

[node name="MenuMusic" parent="." instance=ExtResource( 5 )]
volume_db = -80.0
[connection signal="pressed" from="MenuButtons/b_quit" to="." method="_on_b_quit_pressed"]
